fixed risk progress chart, changed titles in project table, made activity more visible when editing

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -4,6 +4,7 @@
 
 ::-webkit-scrollbar {
   width: 4px;
+  height: 2px;
 }
 
 ::-webkit-scrollbar-thumb {
